objects/sfal__SuccessPlanTemplate__c.object
<CustomObject>
    <description>An action plan template that allows advisors to create, reuse, and share best practices for Success Plans.</description>
    <fields>
        <fullName>sfal__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>The status of the Success Plan Template.</description>
        <inlineHelpText>To apply a Success Plan Template, it must be active.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sfal__Comments__c</fullName>
        <description>Comments about the Success Plan Template.</description>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfal__TasksActive__c</fullName>
        <description>The number of active Tasks associated with this template.</description>
        <inlineHelpText>The number of active Tasks associated with this template.</inlineHelpText>
        <label>Active Tasks</label>
        <summaryFilterItems>
            <field>sfal__SuccessPlanTemplateTask__c.sfal__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>sfal__SuccessPlanTemplateTask__c.sfal__SuccessPlanTemplate__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>sfal__UsageCount__c</fullName>
        <description>The number of times the Success Plan Template was applied.</description>
        <inlineHelpText>The number of times the Success Plan Template was applied. This number doesn&apos;t include how many times the template was published (made available to an advisee).</inlineHelpText>
        <label>Usage Count</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Success Plan Template</label>
    <nameField>
        <label>Success Plan Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Success Plan Templates</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>